templates/spark-thrift-server_template.yaml
---
# Source: spark-thrift-server/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-spark-thrift-server
  labels:
    helm.sh/chart: spark-thrift-server-3.2.0
    app.kubernetes.io/name: spark-thrift-server
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 10000
      targetPort: thrift
      protocol: TCP
      name: thrift
    - port: 4040
      targetPort: sparkui
      protocol: TCP
      name: sparkui
  selector:
    app.kubernetes.io/name: spark-thrift-server
    app.kubernetes.io/instance: release-name
---
# Source: spark-thrift-server/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: release-name-spark-thrift-server
  labels:
    helm.sh/chart: spark-thrift-server-3.2.0
    app.kubernetes.io/name: spark-thrift-server
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  serviceName: release-name-spark-thrift-server
  selector:
    matchLabels:
      app.kubernetes.io/name: spark-thrift-server
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: spark-thrift-server
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: release-name-spark-thrift-server
      securityContext:
        {}
      subdomain: release-name-spark-thrift-server
      hostname: thrift
      containers:
        - name: spark-thrift-server
          securityContext:
            {}
          image: inseefrlab/jupyter-datascience:py3.9.7-spark3.2.0
          command: ["/bin/sh","-c"]
          args: ["/data/onyxia-init.sh $SPARK_HOME/sbin/start-thriftserver.sh"]
          imagePullPolicy: IfNotPresent
          ports:
            - name: thrift
              containerPort: 10000
              protocol: TCP
            - name: sparkui
              containerPort: 4040
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 10000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 10000
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            {}         
          volumeMounts:
            - mountPath: /data
              name: release-name-spark-thrift-server-data
            - name: config-sparkconf
              mountPath: /opt/spark/conf/spark-defaults.conf
              subPath: spark-defaults.conf
            - mountPath: /opt/hadoop/etc/hadoop/core-site.xml
              subPath: core-site.xml
              name: config-coresite
            - name: hive-config
              mountPath: /opt/hive/conf/hive-site.xml
              subPath: hive-site.xml
      volumes:
        - name: release-name-spark-thrift-server-data
          emptyDir: {}
        - name: config-coresite
          configMap:
            name: release-name-spark-thrift-server-configmapcoresite
        - name: config-sparkconf
          configMap:
            name: release-name-spark-thrift-server-configmapsparkconf
        - name: hive-config
          configMap:
            name: release-name-spark-thrift-server-configmaphive
---
# Source: spark-thrift-server/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-spark-thrift-server-ui
  labels:
    helm.sh/chart: spark-thrift-server-3.2.0
    app.kubernetes.io/name: spark-thrift-server
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1"
    app.kubernetes.io/managed-by: Helm
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/whitelist-source-range: 0.0.0.0/0
spec:
  tls:
    - hosts:
        - "chart-example.local"
  rules:
    - host: "chart-example.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: release-name-spark-thrift-server
                port: 
                  number: 4040
